<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c)
  ~ @Group 5
  ~ Kshitij Shah - 801077782
  ~ Parth Mehta - 801057625
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/genderToggle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/weightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/weightLabel"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextWeight" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="103dp"
        android:layout_height="39dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/weight_text_hint"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/weightLabel"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />


    <Switch
        android:id="@+id/genderSwitch"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:showText="true"
        android:switchMinWidth="50dp"
        android:switchTextAppearance="@style/switchTextAppearance"
        android:text="@string/genderLabel"
        android:textColorLink="@android:color/holo_blue_dark"
        android:textOff="@string/female"
        android:textOn="@string/male"
        android:textSize="16sp"
        android:thumb="@drawable/switch_thumb_custom"
        android:thumbTextPadding="10dp"
        android:track="@drawable/switch_track_custom"
        app:layout_constraintBottom_toBottomOf="@+id/editTextWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextWeight"
        app:layout_constraintTop_toTopOf="@+id/editTextWeight"
        tools:checked="true" />


    <Button
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/buttonSave"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextWeight" />

    <TextView
        android:id="@+id/drinkSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/drinkSizeLabel"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave" />

    <RadioGroup
        android:id="@+id/drinkSizeRadioGroup"
        android:layout_width="273dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/drinkSizeLabel"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave">

        <RadioButton
            android:id="@+id/radioButton1oz"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/oz1" />

        <RadioButton
            android:id="@+id/radioButton5oz"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/oz5" />

        <RadioButton
            android:id="@+id/radioButton12oz"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/oz12" />
    </RadioGroup>

    <TextView
        android:id="@+id/alcoholPercentLabel"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/alcoholPercentLabel"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drinkSizeLabel" />

    <SeekBar
        android:id="@+id/alcoholPercentageSlider"
        android:layout_width="212dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:max="20"
        app:layout_constraintStart_toEndOf="@+id/alcoholPercentLabel"
        app:layout_constraintTop_toBottomOf="@+id/drinkSizeRadioGroup" />

    <TextView
        android:id="@+id/alcoholPercentValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/alcoholPercentValue"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/alcoholPercentageSlider"
        app:layout_constraintTop_toBottomOf="@+id/drinkSizeRadioGroup" />

    <Button
        android:id="@+id/buttonAddDrink"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/buttonAddDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alcoholPercentLabel" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/buttonReset"
        app:layout_constraintStart_toEndOf="@+id/buttonAddDrink"
        app:layout_constraintTop_toBottomOf="@+id/alcoholPercentLabel" />

    <ProgressBar
        android:id="@+id/bacLevelProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="325dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:progress="0"
        android:max="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bacLevelText" />

    <TextView
        android:id="@+id/bacLevelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="20dp"
        android:text="@string/bacLevelText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddDrink" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/status"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bacLevelProgressBar" />

    <TextView
        android:id="@+id/statusValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/green_rounded_corner"
        android:padding="5dp"
        android:text="@string/statusValueSafe"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/status"
        app:layout_constraintTop_toBottomOf="@+id/bacLevelProgressBar" />

    <TextView
        android:id="@+id/bacLevelValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/bacLevelValue"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/bacLevelText"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddDrink" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="65dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/app_icon"
        app:layout_constraintStart_toStartOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons_wine_glass" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/toolbar2" />


</android.support.constraint.ConstraintLayout>